[gd_scene load_steps=10 format=3 uid="uid://bm6kueniew5ka"]

[ext_resource type="Script" uid="uid://dxvyal5yirwhn" path="res://menu.gd" id="1_7vrkn"]
[ext_resource type="PackedScene" uid="uid://hned0ve3e6t2" path="res://main.tscn" id="2_fu7sn"]
[ext_resource type="FontFile" uid="uid://cyxhh7ddkn62q" path="res://fonts/Montserrat-Medium.ttf" id="3_fu7sn"]
[ext_resource type="Texture2D" uid="uid://bkd5fs8dndoqs" path="res://art/ChatGPT Image 15 ก.ย. 2568 01_16_11.png" id="3_jix8l"]
[ext_resource type="AudioStream" uid="uid://e42n3xr86w4n" path="res://art/Andrius Klimka - Tundra (Intro).mp3" id="6_nlkkf"]

[sub_resource type="Theme" id="Theme_jix8l"]
default_font = ExtResource("3_fu7sn")
default_font_size = 40

[sub_resource type="Theme" id="Theme_qe12f"]
default_font_size = 20

[sub_resource type="Theme" id="Theme_glbon"]
default_font_size = 25

[sub_resource type="Theme" id="Theme_nlkkf"]
default_font_size = 25

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7vrkn")
game_scene = ExtResource("2_fu7sn")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -13.0
offset_top = -4.0
offset_right = 732.0
offset_bottom = 546.0
mouse_filter = 2
texture = ExtResource("3_jix8l")
expand_mode = 1
stretch_mode = 6

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.5
offset_top = -72.0
offset_right = 192.5
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Center"]
layout_mode = 2

[node name="Title" type="Label" parent="Center/VBox"]
layout_mode = 2
theme = SubResource("Theme_jix8l")
text = "Tank vs Police Cars"

[node name="Name" type="Label" parent="Center/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_qe12f")
text = "663380276-2 นาย ธิปไตย มะลิมาตย์"

[node name="StartButton" type="Button" parent="Center/VBox"]
layout_mode = 2
theme = SubResource("Theme_glbon")
text = "Start"

[node name="ExitButton" type="Button" parent="Center/VBox"]
layout_mode = 2
theme = SubResource("Theme_nlkkf")
text = "Exit"

[node name="Dim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.156863)

[node name="MenuBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_nlkkf")
